--- a/app/assets/htmls/index.html
+++ b/app/assets/htmls/index.html
@@ -70,7 +70,7 @@
 <!-- 최근 등록 기획 end -->
 
       <div class="wrapper">
-         <hr class="line line--black">
+         <div class="line line--black"></div>
       </div>
 
 <!-- 최근 등록 기록물 start -->
@@ -130,7 +130,7 @@
    <!-- 최근 등록 기록물 end -->
 
       <div class="wrapper">
-         <hr class="line line--black">
+         <div class="line line--black"></div>
       </div>
 
    <!-- 보유 기록물 현황 start -->
