Completed Archive responsive web  1.1

--- a/app/assets/htmls/modules/header.html
+++ b/app/assets/htmls/modules/header.html
@@ -111,10 +111,10 @@
     하단메뉴 리스트가 없더라도(0개 이더라도) 스크립트 적용을 위해 ul 요소는 필요합니다.  
     *** -->
                 <ul>
-                    <li><a href="#" class="site-header__bottom-menu__cat"><span>분류류류류</span></a></li>
-                    <li><a href="/p08.html" class="site-header__bottom-menu__dic"><span>사전전전전</span></a></li>
+                    <li><a href="#" class="site-header__bottom-menu__cat"><span>분류</span></a></li>
+                    <li><a href="/p08.html" class="site-header__bottom-menu__dic"><span>사전</span></a></li>
                     <li><a href="#" class="site-header__bottom-menu__timeline"><span>타임테이블</span></a></li>
-                    <li><a href="/p15.html" class="site-header__bottom-menu__series"><span>기획획획획</span></a></li>
+                    <li><a href="/p15.html" class="site-header__bottom-menu__series"><span>기획물</span></a></li>
                 </ul>
             </div>
 
