--- a/app/p16.html
+++ b/app/p16.html
@@ -8,7 +8,7 @@
     <meta name="keywords" content="keyword, keyword, keyword">
     <meta name="description" content="webpage explanation" />
     <!-- <link rel="shortcut icon" href="/favicon"> -->
-    <title>아카이브 모바일</title>
+    <title>아카이브 반응형</title>
 
     <!--[if lt IE 9]>
   <script src="http://apps.bdimg.com/libs/html5shiv/3.7/html5shiv.min.js"></script>
