--- a/app/assets/htmls/modules/footer.html
+++ b/app/assets/htmls/modules/footer.html
@@ -3,11 +3,14 @@
    <div class="wrapper">
 
 <!-- 아카이브소개 + 최근소식 시작 -->
-      <ul class="site-footer__nav">
+      <!-- <ul class="site-footer__nav">
          <li>
             <a href="/p11.html">아카이브 소개</a>
          </li> 
-      </ul>
+      </ul> -->
+      <div class="site-footer__nav">
+         <a href="/p11.html">아카이브 소개</a>
+      </div>
 <!-- 아카이브소개 + 최근소식 끝 -->
 
 <!-- 유관기관 시작 -->
