--- a/app/assets/htmls/p08.html
+++ b/app/assets/htmls/p08.html
@@ -24,6 +24,7 @@
             <li><a href="#" class="type-of-term"><i class="icon-user"></i>인물</a></li>
             <li><a href="#" class="type-of-term"><i class="icon-flag"></i>사건</a></li>
             <li><a href="#" class="type-of-term"><i class="icon-door"></i>조직</a></li>
+            <li><a href="#" class="type-of-term"><i class="icon-box"></i>기타</a></li>
          </ul>
       </nav>
    </section>
