--- a/app/assets/htmls/modules/header.html
+++ b/app/assets/htmls/modules/header.html
@@ -16,8 +16,8 @@
 <![endif]-->
 
     <!-- fonts -->
-    <link href="https://fonts.googleapis.com/css?family=Noto+Sans+KR&display=swap" rel="stylesheet">
-    <link href="https://fonts.googleapis.com/css?family=Roboto&display=swap" rel="stylesheet">
+    <link href="https://fonts.googleapis.com/css?family=Noto+Sans+KR:100,300,400,500,700,900&display=swap" rel="stylesheet">
+    <link href="https://fonts.googleapis.com/css?family=Roboto:400,700,900&display=swap" rel="stylesheet">
     <link rel="stylesheet" href="http://cdn.jsdelivr.net/npm/xeicon@2.3.3/xeicon.min.css">
 
     <link rel="stylesheet" href="temp/styles/styles.css">
@@ -31,7 +31,7 @@
 <!-- 상단메뉴 start -->
         <div class="site-header__top-menu">
             <div class="wrapper">
-                <div class="site-header__top-menu__logo" style="background-image: url();" >
+                <div class="site-header__top-menu__logo" style="background-image: url(temp/images/logo.png);" >
                     <a href="/">아카이브로고</a>
                 </div>
 
