--- a/app/assets/htmls/p04.html
+++ b/app/assets/htmls/p04.html
@@ -85,26 +85,27 @@
       </div>
 <!-- pdf end -->
 
-<!-- ccl + URL 복사 start -->
-      <div class="ccl-social">
+<!-- ccl + URL 복사 + 목록 버튼 start -->
+      <div class="ccl-btns">
 
 <!-- ccl start -->
-         <div class="ccl">
+         <div class="ccl-btns__ccl">
             <a rel="license" href="http://creativecommons.org/licenses/by-nc-nd/4.0/deed.ko" target="_blank">
-               <div class="ccl-image"></div>
+               <div class="ccl-btns__ccl-image"></div>
             </a>
          </div>
 <!-- ccl end -->
 
-<!-- URL 복사 버튼 start -->
-         <div class="urlcopy">
+<!-- URL 복사 + 목록 버튼 start -->
+         <div class="ccl-btns__btns">
             <button type="button" class="btn-url" onclick="CopyURL();">
                <i class="icon-copy"></i>URL 복사
             </button>
+            <a href="/p03.html" class="btn-list" title="목록보기"></a>
          </div>
-<!-- URL 복사 버튼  end -->
+<!-- URL 복사 + 목록 버튼버튼  end -->
       </div>
-<!-- ccl + URL 복사 end -->
+<!-- ccl + URL 복사 + 목록 버튼 end -->
 
    </div>
 
@@ -131,7 +132,7 @@
                <li class="li-title-dot">형태분류
                   <ul>
                      <li class="detail-class">사진류</li>
-                     <li class="btn-for-others"><button type="button" class="btn-small" id="toggleType">다른 기록</button></li>
+                     <li class="btn-for-others"><button type="button" class="btn-small medium-color" id="toggleType">다른 기록</button></li>
 
                      <li class="other-contents">
                         <ul>
@@ -149,7 +150,7 @@
                   <ul>
                      <li class="detail-class">민간기업</li>
                      <li class="detail-class">한국문헌정보(주)</li>
-                     <li class="btn-for-others"><button type="button" class="btn-small">다른 기록</button></li>
+                     <li class="btn-for-others"><button type="button" class="btn-small medium-color">다른 기록</button></li>
 
                      <li class="other-contents">
                         <ul>
@@ -167,7 +168,7 @@
                <li class="li-title-dot">주제분류
                   <ul>
                      <li class="detail-class">주제분류</li>
-                     <li class="btn-for-others"><button type="button" class="btn-small">다른 기록</button></li>
+                     <li class="btn-for-others"><button type="button" class="btn-small medium-color">다른 기록</button></li>
 
                      <li class="other-contents">
                         <ul>
@@ -187,7 +188,7 @@
                      <li class="detail-class">해방 이후</li>
                      <li class="detail-class">기록관리 법령 제정 후</li>
                      <li class="detail-class">2019년</li>
-                     <li class="btn-for-others"><button type="button" class="btn-small">다른 기록</button></li>
+                     <li class="btn-for-others"><button type="button" class="btn-small medium-color">다른 기록</button></li>
 
                      <li class="other-contents">
                         <ul>
