--- a/app/assets/htmls/p09.html
+++ b/app/assets/htmls/p09.html
@@ -241,18 +241,27 @@
       </section>
 
       
-<!-- URL 복사 start -->
-      <div class="ccl-social">
+<!-- ccl + URL 복사 + 목록 버튼 start -->
+      <div class="ccl-btns">
 
-<!-- URL 복사 버튼 start -->
-         <div class="urlcopy">
+<!-- ccl start -->
+         <div class="ccl-btns__ccl">
+            <a rel="license" href="http://creativecommons.org/licenses/by-nc-nd/4.0/deed.ko" target="_blank">
+               <div class="ccl-btns__ccl-image"></div>
+            </a>
+         </div>
+<!-- ccl end -->
+
+<!-- URL 복사 + 목록 버튼 start -->
+         <div class="ccl-btns__btns">
             <button type="button" class="btn-url" onclick="CopyURL();">
                <i class="icon-copy"></i>URL 복사
             </button>
+            <a href="/p03.html" class="btn-list" title="목록보기"></a>
          </div>
-<!-- URL 복사 버튼  end -->
+<!-- URL 복사 + 목록 버튼버튼  end -->
       </div>
-<!-- URL 복사 end -->
+<!-- ccl + URL 복사 + 목록 버튼 end -->
 
    </div>
 
