--- a/app/assets/htmls/p12-1.html
+++ b/app/assets/htmls/p12-1.html
@@ -144,8 +144,8 @@
                <a class="btn btn-light edit" href="#"><i class="xi-pen"></i>수정</a>
                <a class="btn btn-light del" href="#"><i class="xi-trash"></i>삭제</a>
                <a class="btn btn-dark reply" href="#"><i class="xi-subdirectory-arrow"></i>답글</a>
-               <a class="btn btn-dark to-list" href="#" title="목록으로가기"><i class="xi-bars"></i></a>
             </div>
+            <a class="btn btn-list to-list" href="/p12.html" title="목록으로가기"></a>
 <!-- 게시판 포스트 - 등록 메뉴 버튼 end --> 
 <!-- 게시판 포스트  - 글쓰기 버튼 start -->
             <div class="board__write btn-write">
