--- a/app/index.html
+++ b/app/index.html
@@ -16,8 +16,8 @@
 <![endif]-->
 
     <!-- fonts -->
-    <link href="https://fonts.googleapis.com/css?family=Noto+Sans+KR&display=swap" rel="stylesheet">
-    <link href="https://fonts.googleapis.com/css?family=Roboto&display=swap" rel="stylesheet">
+    <link href="https://fonts.googleapis.com/css?family=Noto+Sans+KR:100,300,400,500,700,900&display=swap" rel="stylesheet">
+    <link href="https://fonts.googleapis.com/css?family=Roboto:400,700,900&display=swap" rel="stylesheet">
     <link rel="stylesheet" href="http://cdn.jsdelivr.net/npm/xeicon@2.3.3/xeicon.min.css">
 
     <link rel="stylesheet" href="temp/styles/styles.css">
@@ -31,7 +31,7 @@
 <!-- 상단메뉴 start -->
         <div class="site-header__top-menu">
             <div class="wrapper">
-                <div class="site-header__top-menu__logo" style="background-image: url();" >
+                <div class="site-header__top-menu__logo" style="background-image: url(temp/images/logo.png);" >
                     <a href="/">아카이브로고</a>
                 </div>
 
@@ -468,35 +468,29 @@
          <div class="posts-title">
             <h1 class="t-center">최근 등록 기획</h1>
          </div>
-         
-         <ul class="recent-series">
-            <li class="series-post">
-               <a href="#">
-                  <div class="series-post__cat">영화로 보는 광복절</div>
-                  <div class="series-post__img" style="background-image: url(/temp/images/m-no-img.png)"></div>
-                  <div class="series-post__textbox">
-                     <h2 class="headline--medium t-bold">연상세계를 주목하기 시작한 것은 독방의 무료를 달래기 위한 노래 때문이었다 연상세계를 주목하기 시작한 것은 독방의 무료를 달래기 위한 노래 때문이었다</h2>
-                     <div class="line line--blue-short"></div>
-                     <p class="text-date">2035. 12. 27</p>
-                     <p class="text">내가 감옥 가기 전 마지막으로 본 영화이기도 하고, 그 영화의 첫 장면과 함께 흐르는 주제목의 선율이 주제목의 선율이그렇게 마음에 와 닿았습니다.
-                        내가 감옥 가기 전 마지... </p>
-                  </div>
-               </a>
-            </li>
-            <li class="series-post">
-               <a href="#">
-                  <div class="series-post__cat">영화로 보는 광복절</div>
-                  <div class="series-post__img" style="background-image: url(/temp/images/m-no-img.png)"></div>
-                  <div class="series-post__textbox">
-                     <h2 class="headline--medium t-bold">연상세계를 주목하기 시작한 것은 </h2>
-                     <div class="line line--blue-short"></div>
-                     <p class="text-date">2035. 12. 27</p>
-                     <p class="text">내가 감옥 가기 전 마지막으로 본 영화이기도 하고, 그 영화의 첫 장면과 함께 흐르는 주제목의 선율이 주제목의 선율이그렇게 마음에 와 닿았습니다.
-                        내가 감옥 가기 전 마지... </p>
-                  </div>
-               </a>
-            </li>
-         </ul>
+         <div class="wrapper">
+            <ul class="recent-series">
+               <li class="series-post">
+                  <a href="#">
+                     <div class="series-post__img" style="background-image: url(/temp/images/m-no-img.png)"></div>
+                     <div class="series-post__textbox">
+                        <h3 class="series-post__cat">영화로 보는 광복절</h3>
+                        <h2 class="series-post__text">연상세계를 주목하기 시작한 것은 독방의 무료를 달래기 위한 노래 때문이었다 연상세계를 주목하기 시작한 것은 독방의 무료를 달래기 위한 노래 때문이었다</h2>
+                     </div>
+                  </a>
+               </li>
+               <li class="series-post">
+                  <a href="#">
+                     <div class="series-post__img" style="background-image: url(/temp/images/m-no-img.png)"></div>
+                     <div class="series-post__textbox">
+                        <h3 class="series-post__cat">영화로 보는 광복절</h3>
+                        <h2 class="series-post__text">연상세계를 주목하기 시작한 것은 독방의 무료를 달래기 위한 노래 때문이었다 연상세계를 주목하기 시작한 것은 독방의 무료를 달래기 위한 노래 때문이었다</h2>
+                     </div>
+                  </a>
+               </li>
+            </ul>
+         </div>
+
 
       </section>  
 <!-- 최근 등록 기획 end -->
@@ -626,11 +620,14 @@
    <div class="wrapper">
 
 <!-- 아카이브소개 + 최근소식 시작 -->
-      <ul class="site-footer__nav">
+      <!-- <ul class="site-footer__nav">
          <li>
             <a href="/p11.html">아카이브 소개</a>
          </li> 
-      </ul>
+      </ul> -->
+      <div class="site-footer__nav">
+         <a href="/p11.html">아카이브 소개</a>
+      </div>
 <!-- 아카이브소개 + 최근소식 끝 -->
 
 <!-- 유관기관 시작 -->
