--- a/app/p12-1.html
+++ b/app/p12-1.html
@@ -16,8 +16,8 @@
 <![endif]-->
 
     <!-- fonts -->
-    <link href="https://fonts.googleapis.com/css?family=Noto+Sans+KR&display=swap" rel="stylesheet">
-    <link href="https://fonts.googleapis.com/css?family=Roboto&display=swap" rel="stylesheet">
+    <link href="https://fonts.googleapis.com/css?family=Noto+Sans+KR:100,300,400,500,700,900&display=swap" rel="stylesheet">
+    <link href="https://fonts.googleapis.com/css?family=Roboto:400,700,900&display=swap" rel="stylesheet">
     <link rel="stylesheet" href="http://cdn.jsdelivr.net/npm/xeicon@2.3.3/xeicon.min.css">
 
     <link rel="stylesheet" href="temp/styles/styles.css">
@@ -31,7 +31,7 @@
 <!-- 상단메뉴 start -->
         <div class="site-header__top-menu">
             <div class="wrapper">
-                <div class="site-header__top-menu__logo" style="background-image: url();" >
+                <div class="site-header__top-menu__logo" style="background-image: url(temp/images/logo.png);" >
                     <a href="/">아카이브로고</a>
                 </div>
 
@@ -576,8 +576,8 @@
                <a class="btn btn-light edit" href="#"><i class="xi-pen"></i>수정</a>
                <a class="btn btn-light del" href="#"><i class="xi-trash"></i>삭제</a>
                <a class="btn btn-dark reply" href="#"><i class="xi-subdirectory-arrow"></i>답글</a>
-               <a class="btn btn-dark to-list" href="#" title="목록으로가기"><i class="xi-bars"></i></a>
             </div>
+            <a class="btn btn-list to-list" href="/p12.html" title="목록으로가기"></a>
 <!-- 게시판 포스트 - 등록 메뉴 버튼 end --> 
 <!-- 게시판 포스트  - 글쓰기 버튼 start -->
             <div class="board__write btn-write">
@@ -598,11 +598,14 @@
    <div class="wrapper">
 
 <!-- 아카이브소개 + 최근소식 시작 -->
-      <ul class="site-footer__nav">
+      <!-- <ul class="site-footer__nav">
          <li>
             <a href="/p11.html">아카이브 소개</a>
          </li> 
-      </ul>
+      </ul> -->
+      <div class="site-footer__nav">
+         <a href="/p11.html">아카이브 소개</a>
+      </div>
 <!-- 아카이브소개 + 최근소식 끝 -->
 
 <!-- 유관기관 시작 -->
