--- a/app/p16.html
+++ b/app/p16.html
@@ -16,8 +16,8 @@
 <![endif]-->
 
     <!-- fonts -->
-    <link href="https://fonts.googleapis.com/css?family=Noto+Sans+KR&display=swap" rel="stylesheet">
-    <link href="https://fonts.googleapis.com/css?family=Roboto&display=swap" rel="stylesheet">
+    <link href="https://fonts.googleapis.com/css?family=Noto+Sans+KR:100,300,400,500,700,900&display=swap" rel="stylesheet">
+    <link href="https://fonts.googleapis.com/css?family=Roboto:400,700,900&display=swap" rel="stylesheet">
     <link rel="stylesheet" href="http://cdn.jsdelivr.net/npm/xeicon@2.3.3/xeicon.min.css">
 
     <link rel="stylesheet" href="temp/styles/styles.css">
@@ -31,7 +31,7 @@
 <!-- 상단메뉴 start -->
         <div class="site-header__top-menu">
             <div class="wrapper">
-                <div class="site-header__top-menu__logo" style="background-image: url();" >
+                <div class="site-header__top-menu__logo" style="background-image: url(temp/images/logo.png);" >
                     <a href="/">아카이브로고</a>
                 </div>
 
@@ -446,14 +446,7 @@
          <div class="series-contents__title t-bold t-center">
             <h1>연상세계를 주목하기 시작한 것은 독방의 무료를 달래기 위한 노래 때문</h1>
          </div>
-<!-- 기록 제목 enc -->
-
-<!-- 기록 작성자 날짜 start -->
-         <div class="series-contents__info">
-            <span class="info info-name">김이슬</span>
-            <span class="info info-date">2019. 7. 6</span>
-         </div>
-<!-- 기록 작성자 날짜 end -->
+<!-- 기록 제목 end -->
 
 <!-- 기록 내용 start -->
          <div class="series-contents__text">
@@ -561,18 +554,27 @@
 <!-- 관련기록물 - 더보기 버튼 end -->
          </div>
 
-<!-- URL 복사 start -->
-         <div class="ccl-social">
+<!-- ccl + URL 복사 + 목록 버튼 start -->
+      <div class="ccl-btns">
 
-<!-- URL 복사 버튼 start -->
-            <div class="urlcopy">
-               <button type="button" class="btn-url" onclick="CopyURL();">
-                  <i class="icon-copy"></i>URL 복사
-               </button>
-            </div>
-<!-- URL 복사 버튼  end -->
+<!-- ccl start -->
+         <div class="ccl-btns__ccl">
+            <a rel="license" href="http://creativecommons.org/licenses/by-nc-nd/4.0/deed.ko" target="_blank">
+               <div class="ccl-btns__ccl-image"></div>
+            </a>
          </div>
-<!-- URL 복사 end -->
+<!-- ccl end -->
+
+<!-- URL 복사 + 목록 버튼 start -->
+         <div class="ccl-btns__btns">
+            <button type="button" class="btn-url" onclick="CopyURL();">
+               <i class="icon-copy"></i>URL 복사
+            </button>
+            <a href="/p03.html" class="btn-list" title="목록보기"></a>
+         </div>
+<!-- URL 복사 + 목록 버튼버튼  end -->
+      </div>
+<!-- ccl + URL 복사 + 목록 버튼 end -->
 
       </section>
 <!-- 관련기록물 start -->
@@ -585,11 +587,14 @@
    <div class="wrapper">
 
 <!-- 아카이브소개 + 최근소식 시작 -->
-      <ul class="site-footer__nav">
+      <!-- <ul class="site-footer__nav">
          <li>
             <a href="/p11.html">아카이브 소개</a>
          </li> 
-      </ul>
+      </ul> -->
+      <div class="site-footer__nav">
+         <a href="/p11.html">아카이브 소개</a>
+      </div>
 <!-- 아카이브소개 + 최근소식 끝 -->
 
 <!-- 유관기관 시작 -->
