Completed Archive 2.1 fot the FTP test.

--- a/app/assets/htmls/modules/modal-cat-menu.html
+++ b/app/assets/htmls/modules/modal-cat-menu.html
@@ -50,7 +50,7 @@
                      </li>
 
                      <li class="depth3"><a href="#" class="nav-menu">강의-나의 동양고전 독법</a></li>
-                     <li class="depth3"><a href="/p05.html" class="nav-menu">당록-신영복의 마지막 강의</a></li>
+                     <li class="depth3"><a href="./p05.html" class="nav-menu">당록-신영복의 마지막 강의</a></li>
                      <li class="depth3"><a href="#" class="nav-menu">나무야 나무야</a></li>
                      <li class="depth3"><a href="#" class="nav-menu">더불어숲</a></li>
                      <li class="depth3"><a href="#" class="nav-menu">청구회 추억</a></li>
