--- a/app/assets/htmls/p05.html
+++ b/app/assets/htmls/p05.html
@@ -24,8 +24,8 @@
         <div class="wrapper">
 
             <div class="array-view">
-                <a href="/p05.html" class="array-view__list active"></a>
-                <a href="/p05-1.html" class="array-view__thumb"></a>
+                <a href="./p05.html" class="array-view__list active"></a>
+                <a href="./p05-1.html" class="array-view__thumb"></a>
             </div>
 
             <div class="position-right">
