--- a/app/assets/htmls/p08.html
+++ b/app/assets/htmls/p08.html
@@ -59,7 +59,7 @@
             <ul>
 
 <!-- 포스트 영역 - 용어리스트 - 인물 start -->
-               <li><a href="/p09.html">
+               <li><a href="./p09.html">
                   <div class="term-title"><span> <i class="icon-user"></i>안병우안병우 안병우안병우안병우 안병우 안병우안병우 안병우</span></div>
                   <div class="term-another-title"><span>Ahn ByungwooAhn Byungwoo Ahn Byungwoo Ahn Byungwoo</span></div>
                   <div class="term-period"><span>1961. 6. 21 -</span></div>
@@ -67,7 +67,7 @@
 <!-- 포스트 영역 - 용어리스트 - 인물 end -->
 
 <!-- 포스트 영역 - 용어리스트 - 사건 start -->
-               <li><a href="/p09.html">
+               <li><a href="./p09.html">
                   <div class="term-title"><span> <i class="icon-flag"></i>국가기록관리혁신TF</span></div>
                   <div class="term-another-title"><span>National Library of Repubic of Korea</span></div>
                   <div class="term-period"><span>2003. 12. 21 - 2019. 12. 30</span></div>
@@ -75,50 +75,50 @@
 <!-- 포스트 영역 - 용어리스트 - 사건 end -->
 
 <!-- 포스트 영역 - 용어리스트 - 조직 start -->
-               <li><a href="/p09.html">
+               <li><a href="./p09.html">
                   <div class="term-title"><span> <i class="icon-door"></i> (프랑스) 중앙 정부 기록 관리 기관</span></div>
                   <div class="term-another-title"><span>Central Government of France</span></div>
                   <div class="term-period"><span>1919. 6. 21 - 1985. 12. 31</span></div>
                </a></li>
 <!-- 포스트 영역 - 용어리스트 - 조직 end -->
 
-               <li><a href="/p09.html">
+               <li><a href="./p09.html">
                   <div class="term-title"><span> <i class="icon-user"></i>안병우</span></div>
                   <div class="term-another-title"><span>Ahn ByungwooAhn</span></div>
                   <div class="term-period"><span>1961. 6. 21 -</span></div>
                </a></li>
 
-               <li><a href="/p09.html">
+               <li><a href="./p09.html">
                   <div class="term-title"><span> <i class="icon-flag"></i>국가기록관리혁신TF</span></div>
                   <div class="term-another-title"><span>National Library of Repubic of Korea</span></div>
                   <div class="term-period"><span>2003. 12. 21 - 2019. 12. 30</span></div>
                </a></li>
 
-               <li><a href="/p09.html">
+               <li><a href="./p09.html">
                   <div class="term-title"><span> <i class="icon-door"></i> (프랑스) 중앙 정부 기록 관리 기관</span></div>
                   <div class="term-another-title"><span>Central Government of France</span></div>
                   <div class="term-period"><span>1919. 6. 21 - 1985. 12. 31</span></div>
                </a></li>
 
-               <li><a href="/p09.html">
+               <li><a href="./p09.html">
                   <div class="term-title"><span> <i class="icon-user"></i>안병우</span></div>
                   <div class="term-another-title"><span>Ahn ByungwooAhn</span></div>
                   <div class="term-period"><span>1961. 6. 21 -</span></div>
                </a></li>
 
-               <li><a href="/p09.html">
+               <li><a href="./p09.html">
                   <div class="term-title"><span> <i class="icon-flag"></i>국가기록관리혁신TF</span></div>
                   <div class="term-another-title"><span>National Library of Repubic of Korea</span></div>
                   <div class="term-period"><span>2003. 12. 21 - 2019. 12. 30</span></div>
                </a></li>
 
-               <li><a href="/p09.html">
+               <li><a href="./p09.html">
                   <div class="term-title"><span> <i class="icon-door"></i> (프랑스) 중앙 정부 기록 관리 기관</span></div>
                   <div class="term-another-title"><span>Central Government of France</span></div>
                   <div class="term-period"><span>1919. 6. 21 - 1985. 12. 31</span></div>
                </a></li>
 
-               <li><a href="/p09.html">
+               <li><a href="./p09.html">
                   <div class="term-title"><span> <i class="icon-user"></i>안병우</span></div>
                   <div class="term-another-title"><span>Ahn ByungwooAhn</span></div>
                   <div class="term-period"><span>1961. 6. 21 -</span></div>
