--- a/app/assets/htmls/p09.html
+++ b/app/assets/htmls/p09.html
@@ -257,7 +257,7 @@
             <button type="button" class="btn-url" onclick="CopyURL();">
                <i class="icon-copy"></i>URL 복사
             </button>
-            <a href="/p03.html" class="btn-list" title="목록보기"></a>
+            <a href="./p03.html" class="btn-list" title="목록보기"></a>
          </div>
 <!-- URL 복사 + 목록 버튼버튼  end -->
       </div>
