--- a/app/assets/htmls/p12.html
+++ b/app/assets/htmls/p12.html
@@ -57,7 +57,7 @@
 -->   
    <section class="board__post">
       <ul>
-         <li class="board-post board-post-3"><a href="/p12-1.html">
+         <li class="board-post board-post-3"><a href="./p12-1.html">
             <div class="board__post__title">
                <p>보존 기록 기술에 관한 북미 프로젝트에 관한 문의사항이 있습니다.</p>
                <span class="comments">23</span>
@@ -72,7 +72,7 @@
             </div>
          </a></li>
 
-         <li class="board-post board-post-1 re"><a href="/p12-1.html">
+         <li class="board-post board-post-1 re"><a href="./p12-1.html">
             <div class="board__post__title">
                <p>보존 기록 기술에 관한 북미 프로젝트에 관한 문의사항이 있습니다.</p>
                <i class="secret"></i>
@@ -85,7 +85,7 @@
             </div>
          </a></li>
          
-         <li class="board-post board-post-2"><a href="/p12-1.html">
+         <li class="board-post board-post-2"><a href="./p12-1.html">
             <div class="board__post__title">
                <p>보존 기록 기술에 관한 북미 프로젝트에 관한 문의사항이 있습니다.</p>
                <span class="comments">23</span>
@@ -99,7 +99,7 @@
             </div>
          </a></li>
 
-         <li class="board-post board-post-2"><a href="/p12-1.html">
+         <li class="board-post board-post-2"><a href="./p12-1.html">
             <div class="board__post__title">
                <p>보존 기록 기술에 관한 북미 프로젝트에 관한 문의사항이 있습니다.</p>
                <span class="comments">23</span>
@@ -113,7 +113,7 @@
             </div>
          </a></li>
 
-         <li class="board-post board-post-1"><a href="/p12-1.html">
+         <li class="board-post board-post-1"><a href="./p12-1.html">
             <div class="board__post__title">
                <p>보존 기록 기술에 관한 북미 프로젝트에 관한 문의사항이 있습니다.</p>
                <span class="comments">23</span>
@@ -126,7 +126,7 @@
             </div>
          </a></li>
 
-         <li class="board-post board-post-1"><a href="/p12-1.html">
+         <li class="board-post board-post-1"><a href="./p12-1.html">
             <div class="board__post__title">
                <p>보존 기록 기술에 관한 북미 프로젝트에 관한 문의사항이 있습니다.</p>
                <i class="attachment"></i>
@@ -139,7 +139,7 @@
             </div>
          </a></li>
 
-         <li class="board-post board-post-1"><a href="/p12-1.html">
+         <li class="board-post board-post-1"><a href="./p12-1.html">
             <div class="board__post__title">
                <p>보존 기록 기술에 관한 북미 프로젝트에 관한 문의사항이 있습니다.</p>
                <i class="secret"></i>
@@ -152,7 +152,7 @@
             </div>
          </a></li>
 
-         <li class="board-post board-post-3 re"><a href="/p12-1.html">
+         <li class="board-post board-post-3 re"><a href="./p12-1.html">
             <div class="board__post__title">
                <p>보존 기록 기술에 관한 북미 프로젝트에 관한 문의사항이 있습니다.</p>
                <span class="comments">23</span>
@@ -168,7 +168,7 @@
          </a></li>
 
 
-         <li class="board-post board-post"><a href="/p12-1.html">
+         <li class="board-post board-post"><a href="./p12-1.html">
             <div class="board__post__title">
                <p>보존 기록 기술에 관한 북미 프로젝트에 관한 문의사항이 있습니다.</p>
             </div>
@@ -180,7 +180,7 @@
             </div>
          </a></li>
 
-         <li class="board-post board-post re"><a href="/p12-1.html">
+         <li class="board-post board-post re"><a href="./p12-1.html">
             <div class="board__post__title">
                <p>보존 기록 기술에 관한 북미 프로젝트에 관한 문의사항이 있습니다.</p>
             </div>
@@ -202,7 +202,7 @@
 
 <!-- 게시판 포스트  - 글쓰기 버튼 start -->
       <div class="board__write btn-write">
-         <a href="/p12-2.html" title="글쓰기버튼">+</a>
+         <a href="./p12-2.html" title="글쓰기버튼">+</a>
       </div>
 <!-- 게시판 포스트  - 글쓰기 버튼 end -->
 
