--- a/app/assets/htmls/test.html
+++ b/app/assets/htmls/test.html
@@ -3,9 +3,9 @@
    <div class="wrapper">
       <ul>
           <li><a href="#" class="site-header__bottom-menu__cat">분류</a></li>
-          <li><a href="/p08.html" class="site-header__bottom-menu__dic">사전</a></li>
+          <li><a href="./p08.html" class="site-header__bottom-menu__dic">사전</a></li>
           <li><a href="#" class="site-header__bottom-menu__timeline">타임테이블</a></li>
-          <li><a href="/p15.html" class="site-header__bottom-menu__series"><span>기획</span></a></li>
+          <li><a href="./p15.html" class="site-header__bottom-menu__series"><span>기획</span></a></li>
       </ul>
    </div>
 </div>
