--- a/app/assets/htmls/modules/header.html
+++ b/app/assets/htmls/modules/header.html
@@ -31,12 +31,12 @@
 <!-- 상단메뉴 start -->
         <div class="site-header__top-menu">
             <div class="wrapper">
-                <div class="site-header__top-menu__logo" style="background-image: url(temp/images/logo.png);" >
-                    <a href="/">아카이브로고</a>
+                <div class="site-header__top-menu__logo" style="background-image: url(./temp/images/logo.png);" >
+                    <a href="./index.html">아카이브로고</a>
                 </div>
 
                 <div class="site-header__top-menu__search">
-                    <a href="/p03.html">검색</a>
+                    <a href="./p03.html">검색</a>
                 </div>
 
             </div>
@@ -54,7 +54,7 @@
             <div class="main-nav__container">
                 <div class="wrapper">
                     <div class="main-nav__sign-in btn-large">
-                        <a href="/p01.html" class="">로그인</a>
+                        <a href="./p01.html" class="">로그인</a>
                     </div>
                     @@include('cat-menu.html')
                 </div>
@@ -62,7 +62,7 @@
                 <ul class="main-nav__links">
                     <li class="main-nav__links__link-dic">
                         <div class="wrapper">
-                            <a href="/p08.html">
+                            <a href="./p08.html">
                                 <div class="link-icon"></div>
                                 <div class="link-title">사전</div>
                                 <div class="link-caption">사전이 무엇인지 설명해 주세요.</div>
@@ -80,7 +80,7 @@
                     </li>
                     <li class="main-nav__links__link-series">
                         <div class="wrapper">
-                            <a href="/p15.html">
+                            <a href="./p15.html">
                                 <div class="link-icon"></div>
                                 <div class="link-title">기획</div>
                                 <div class="link-caption">기획이 무엇인지 설명해 주세요.</div>
@@ -92,10 +92,10 @@
                 <div class="main-nav__links-2">
                      <div class="wrapper">
                         <div class="main-nav__about btn-large">
-                              <a href="/p11.html" class="">아카이브 소개</a>
+                              <a href="./p11.html" class="">아카이브 소개</a>
                         </div>
                         <div class="main-nav__board btn-large">
-                              <a href="/p12.html" class="">게시판</a>
+                              <a href="./p12.html" class="">게시판</a>
                         </div>
                      </div>
                 </div>
@@ -112,9 +112,9 @@
     *** -->
                 <ul>
                     <li><a href="#" class="site-header__bottom-menu__cat"><span>분류</span></a></li>
-                    <li><a href="/p08.html" class="site-header__bottom-menu__dic"><span>사전</span></a></li>
+                    <li><a href="./p08.html" class="site-header__bottom-menu__dic"><span>사전</span></a></li>
                     <li><a href="#" class="site-header__bottom-menu__timeline"><span>타임테이블</span></a></li>
-                    <li><a href="/p15.html" class="site-header__bottom-menu__series"><span>기획물</span></a></li>
+                    <li><a href="./p15.html" class="site-header__bottom-menu__series"><span>기획물</span></a></li>
                 </ul>
             </div>
 
