--- a/app/assets/htmls/p01.html
+++ b/app/assets/htmls/p01.html
@@ -13,7 +13,7 @@
          <form autocomplete="off" class="">
             <fieldset>
 <!-- 로고 start -->
-               <legend style="background-image: url(temp/images/logo.png);"></legend>
+               <legend style="background-image: url(./temp/images/logo.png);"></legend>
 <!-- 로고 end -->
 <!-- 아이디 + 비밀번호 영역 start -->
                <div class="signin__contents">
