--- a/app/assets/htmls/p04.html
+++ b/app/assets/htmls/p04.html
@@ -43,10 +43,10 @@
 
 <!-- 기록슬라이더 end -->
       <div class="doc__slider">
-         <div class="doc__slider__slide" style="background-image: url(temp/images/m-hero-slider01.png)"></div>
-         <div class="doc__slider__slide" style="background-image: url(temp/images/m-hero-slider02.png)"></div>
-         <div class="doc__slider__slide" style="background-image: url(temp/images/m-hero-slider03.png)"></div>
-         <div class="doc__slider__slide" style="background-image: url(temp/images/m-hero-slider01.png)"></div>
+         <div class="doc__slider__slide" style="background-image: url(./temp/images/m-hero-slider01.png)"></div>
+         <div class="doc__slider__slide" style="background-image: url(./temp/images/m-hero-slider02.png)"></div>
+         <div class="doc__slider__slide" style="background-image: url(./temp/images/m-hero-slider03.png)"></div>
+         <div class="doc__slider__slide" style="background-image: url(./temp/images/m-hero-slider01.png)"></div>
       </div>
 <!-- 기록슬라이더 end -->
 
@@ -101,7 +101,7 @@
             <button type="button" class="btn-url" onclick="CopyURL();">
                <i class="icon-copy"></i>URL 복사
             </button>
-            <a href="/p03.html" class="btn-list" title="목록보기"></a>
+            <a href="./p03.html" class="btn-list" title="목록보기"></a>
          </div>
 <!-- URL 복사 + 목록 버튼버튼  end -->
       </div>
