--- a/app/assets/htmls/p12-1.html
+++ b/app/assets/htmls/p12-1.html
@@ -145,11 +145,11 @@
                <a class="btn btn-light del" href="#"><i class="xi-trash"></i>삭제</a>
                <a class="btn btn-dark reply" href="#"><i class="xi-subdirectory-arrow"></i>답글</a>
             </div>
-            <a class="btn btn-list to-list" href="/p12.html" title="목록으로가기"></a>
+            <a class="btn btn-list to-list" href="./p12.html" title="목록으로가기"></a>
 <!-- 게시판 포스트 - 등록 메뉴 버튼 end --> 
 <!-- 게시판 포스트  - 글쓰기 버튼 start -->
             <div class="board__write btn-write">
-               <a href="/p12-2.html" title="글쓰기버튼">+</a>
+               <a href="./p12-2.html" title="글쓰기버튼">+</a>
             </div>
 <!-- 게시판 포스트  - 글쓰기 버튼 end -->
          </div>
