--- a/app/assets/htmls/p12-2.html
+++ b/app/assets/htmls/p12-2.html
@@ -116,7 +116,7 @@
          <a class="btn btn-dark cancel" href="#"><i class="xi-close-min"></i>취소</a>
          <a class="btn btn-dark save" href="#"><i class="xi-check-min"></i>저장</a>
       </div>
-      <a class="btn btn-list to-list" href="/p12.html" title="목록으로가기"></a>
+      <a class="btn btn-list to-list" href="./p12.html" title="목록으로가기"></a>
 <!-- 글쓰기 하단 메뉴 end -->  
 
    </section>
