--- a/app/assets/htmls/p15.html
+++ b/app/assets/htmls/p15.html
@@ -20,8 +20,8 @@
 <!-- 기획 포스트 - 리스트 start -->
       <ul class="wrapper">
          <li class="series-post">
-            <a href="/p16.html">
-               <div class="series-post__img" style="background-image: url(/temp/images/m-no-img.png)"></div>
+            <a href="./p16.html">
+               <div class="series-post__img" style="background-image: url(./temp/images/m-no-img.png)"></div>
                <div class="series-post__textbox">
                   <h3 class="series-post__cat">영화로 보는 광복절</h3>
                   <h2 class="series-post__text">연상세계를 주목하기 시작한 것은 독방의 무료를 달래기 위한 노래 때문이었다 연상세계를 주목하기 시작한 것은 독방의 무료를 달래기 위한 노래 때문이었다</h2>
@@ -32,8 +32,8 @@
             </a>
          </li>
          <li class="series-post">
-            <a href="/p16.html">
-               <div class="series-post__img" style="background-image: url(/temp/images/m-no-img.png)"></div>
+            <a href="./p16.html">
+               <div class="series-post__img" style="background-image: url(./temp/images/m-no-img.png)"></div>
                <div class="series-post__textbox">
                   <h3 class="series-post__cat">영화로 보는 광복절</h3>
                   <h2 class="series-post__text">연상세계를 주목하기 시작한 것은 독방의 무료를 달래기 위한 노래 때문이었다 연상세계를 주목하기 시작한 것은 독방의 무료를 달래기 위한 노래 때문이었다</h2>
@@ -44,8 +44,8 @@
             </a>
          </li>
          <li class="series-post">
-            <a href="/p16.html">
-               <div class="series-post__img" style="background-image: url(/temp/images/m-no-img.png)"></div>
+            <a href="./p16.html">
+               <div class="series-post__img" style="background-image: url(./temp/images/m-no-img.png)"></div>
                <div class="series-post__textbox">
                   <h3 class="series-post__cat">영화로 보는 광복절</h3>
                   <h2 class="series-post__text">연상세계를 주목하기 시작한 것은 독방의 무료를 달래기 위한 노래 때문이었다 연상세계를 주목하기 시작한 것은 독방의 무료를 달래기 위한 노래 때문이었다</h2>
@@ -56,8 +56,8 @@
             </a>
          </li>
          <li class="series-post">
-            <a href="/p16.html">
-               <div class="series-post__img" style="background-image: url(/temp/images/m-no-img.png)"></div>
+            <a href="./p16.html">
+               <div class="series-post__img" style="background-image: url(./temp/images/m-no-img.png)"></div>
                <div class="series-post__textbox">
                   <h3 class="series-post__cat">영화로 보는 광복절</h3>
                   <h2 class="series-post__text">연상세계를 주목하기 시작한 것은 독방의 무료를 달래기 위한 노래 때문이었다 연상세계를 주목하기 시작한 것은 독방의 무료를 달래기 위한 노래 때문이었다</h2>
@@ -68,8 +68,8 @@
             </a>
          </li>
          <li class="series-post">
-            <a href="/p16.html">
-               <div class="series-post__img" style="background-image: url(/temp/images/m-no-img.png)"></div>
+            <a href="./p16.html">
+               <div class="series-post__img" style="background-image: url(./temp/images/m-no-img.png)"></div>
                <div class="series-post__textbox">
                   <h3 class="series-post__cat">영화로 보는 광복절</h3>
                   <h2 class="series-post__text">연상세계를 주목하기 시작한 것은 독방의 무료를 달래기 위한 노래 때문이었다 연상세계를 주목하기 시작한 것은 독방의 무료를 달래기 위한 노래 때문이었다</h2>
@@ -80,8 +80,8 @@
             </a>
          </li>
          <li class="series-post">
-            <a href="/p16.html">
-               <div class="series-post__img" style="background-image: url(/temp/images/m-no-img.png)"></div>
+            <a href="./p16.html">
+               <div class="series-post__img" style="background-image: url(./temp/images/m-no-img.png)"></div>
                <div class="series-post__textbox">
                   <h3 class="series-post__cat">영화로 보는 광복절</h3>
                   <h2 class="series-post__text">연상세계를 주목하기 시작한 것은 독방의 무료를 달래기 위한 노래 때문이었다 연상세계를 주목하기 시작한 것은 독방의 무료를 달래기 위한 노래 때문이었다</h2>
