--- a/app/p12.html
+++ b/app/p12.html
@@ -31,12 +31,12 @@
 <!-- 상단메뉴 start -->
         <div class="site-header__top-menu">
             <div class="wrapper">
-                <div class="site-header__top-menu__logo" style="background-image: url(temp/images/logo.png);" >
-                    <a href="/">아카이브로고</a>
+                <div class="site-header__top-menu__logo" style="background-image: url(./temp/images/logo.png);" >
+                    <a href="./index.html">아카이브로고</a>
                 </div>
 
                 <div class="site-header__top-menu__search">
-                    <a href="/p03.html">검색</a>
+                    <a href="./p03.html">검색</a>
                 </div>
 
             </div>
@@ -54,7 +54,7 @@
             <div class="main-nav__container">
                 <div class="wrapper">
                     <div class="main-nav__sign-in btn-large">
-                        <a href="/p01.html" class="">로그인</a>
+                        <a href="./p01.html" class="">로그인</a>
                     </div>
                     <!-- 상단메뉴 모달 네비게이션 start -->
 <nav class="cat-menu">
@@ -108,7 +108,7 @@
                   </li>
 
                   <li class="depth3"><a href="#" class="nav-menu">강의-나의 동양고전 독법</a></li>
-                  <li class="depth3"><a href="/p05.html" class="nav-menu">당록-신영복의 마지막</a></li>
+                  <li class="depth3"><a href="./p05.html" class="nav-menu">당록-신영복의 마지막</a></li>
                   <li class="depth3"><a href="#" class="nav-menu">나무야 나무야</a></li>
                   <li class="depth3"><a href="#" class="nav-menu">더불어숲</a></li>
                   <li class="depth3"><a href="#" class="nav-menu">청구회 추억</a></li>
@@ -207,7 +207,7 @@
                 <ul class="main-nav__links">
                     <li class="main-nav__links__link-dic">
                         <div class="wrapper">
-                            <a href="/p08.html">
+                            <a href="./p08.html">
                                 <div class="link-icon"></div>
                                 <div class="link-title">사전</div>
                                 <div class="link-caption">사전이 무엇인지 설명해 주세요.</div>
@@ -225,7 +225,7 @@
                     </li>
                     <li class="main-nav__links__link-series">
                         <div class="wrapper">
-                            <a href="/p15.html">
+                            <a href="./p15.html">
                                 <div class="link-icon"></div>
                                 <div class="link-title">기획</div>
                                 <div class="link-caption">기획이 무엇인지 설명해 주세요.</div>
@@ -237,10 +237,10 @@
                 <div class="main-nav__links-2">
                      <div class="wrapper">
                         <div class="main-nav__about btn-large">
-                              <a href="/p11.html" class="">아카이브 소개</a>
+                              <a href="./p11.html" class="">아카이브 소개</a>
                         </div>
                         <div class="main-nav__board btn-large">
-                              <a href="/p12.html" class="">게시판</a>
+                              <a href="./p12.html" class="">게시판</a>
                         </div>
                      </div>
                 </div>
@@ -257,9 +257,9 @@
     *** -->
                 <ul>
                     <li><a href="#" class="site-header__bottom-menu__cat"><span>분류</span></a></li>
-                    <li><a href="/p08.html" class="site-header__bottom-menu__dic"><span>사전</span></a></li>
+                    <li><a href="./p08.html" class="site-header__bottom-menu__dic"><span>사전</span></a></li>
                     <li><a href="#" class="site-header__bottom-menu__timeline"><span>타임테이블</span></a></li>
-                    <li><a href="/p15.html" class="site-header__bottom-menu__series"><span>기획물</span></a></li>
+                    <li><a href="./p15.html" class="site-header__bottom-menu__series"><span>기획물</span></a></li>
                 </ul>
             </div>
 
@@ -322,7 +322,7 @@
                      </li>
 
                      <li class="depth3"><a href="#" class="nav-menu">강의-나의 동양고전 독법</a></li>
-                     <li class="depth3"><a href="/p05.html" class="nav-menu">당록-신영복의 마지막 강의</a></li>
+                     <li class="depth3"><a href="./p05.html" class="nav-menu">당록-신영복의 마지막 강의</a></li>
                      <li class="depth3"><a href="#" class="nav-menu">나무야 나무야</a></li>
                      <li class="depth3"><a href="#" class="nav-menu">더불어숲</a></li>
                      <li class="depth3"><a href="#" class="nav-menu">청구회 추억</a></li>
@@ -489,7 +489,7 @@
 -->   
    <section class="board__post">
       <ul>
-         <li class="board-post board-post-3"><a href="/p12-1.html">
+         <li class="board-post board-post-3"><a href="./p12-1.html">
             <div class="board__post__title">
                <p>보존 기록 기술에 관한 북미 프로젝트에 관한 문의사항이 있습니다.</p>
                <span class="comments">23</span>
@@ -504,7 +504,7 @@
             </div>
          </a></li>
 
-         <li class="board-post board-post-1 re"><a href="/p12-1.html">
+         <li class="board-post board-post-1 re"><a href="./p12-1.html">
             <div class="board__post__title">
                <p>보존 기록 기술에 관한 북미 프로젝트에 관한 문의사항이 있습니다.</p>
                <i class="secret"></i>
@@ -517,7 +517,7 @@
             </div>
          </a></li>
          
-         <li class="board-post board-post-2"><a href="/p12-1.html">
+         <li class="board-post board-post-2"><a href="./p12-1.html">
             <div class="board__post__title">
                <p>보존 기록 기술에 관한 북미 프로젝트에 관한 문의사항이 있습니다.</p>
                <span class="comments">23</span>
@@ -531,7 +531,7 @@
             </div>
          </a></li>
 
-         <li class="board-post board-post-2"><a href="/p12-1.html">
+         <li class="board-post board-post-2"><a href="./p12-1.html">
             <div class="board__post__title">
                <p>보존 기록 기술에 관한 북미 프로젝트에 관한 문의사항이 있습니다.</p>
                <span class="comments">23</span>
@@ -545,7 +545,7 @@
             </div>
          </a></li>
 
-         <li class="board-post board-post-1"><a href="/p12-1.html">
+         <li class="board-post board-post-1"><a href="./p12-1.html">
             <div class="board__post__title">
                <p>보존 기록 기술에 관한 북미 프로젝트에 관한 문의사항이 있습니다.</p>
                <span class="comments">23</span>
@@ -558,7 +558,7 @@
             </div>
          </a></li>
 
-         <li class="board-post board-post-1"><a href="/p12-1.html">
+         <li class="board-post board-post-1"><a href="./p12-1.html">
             <div class="board__post__title">
                <p>보존 기록 기술에 관한 북미 프로젝트에 관한 문의사항이 있습니다.</p>
                <i class="attachment"></i>
@@ -571,7 +571,7 @@
             </div>
          </a></li>
 
-         <li class="board-post board-post-1"><a href="/p12-1.html">
+         <li class="board-post board-post-1"><a href="./p12-1.html">
             <div class="board__post__title">
                <p>보존 기록 기술에 관한 북미 프로젝트에 관한 문의사항이 있습니다.</p>
                <i class="secret"></i>
@@ -584,7 +584,7 @@
             </div>
          </a></li>
 
-         <li class="board-post board-post-3 re"><a href="/p12-1.html">
+         <li class="board-post board-post-3 re"><a href="./p12-1.html">
             <div class="board__post__title">
                <p>보존 기록 기술에 관한 북미 프로젝트에 관한 문의사항이 있습니다.</p>
                <span class="comments">23</span>
@@ -600,7 +600,7 @@
          </a></li>
 
 
-         <li class="board-post board-post"><a href="/p12-1.html">
+         <li class="board-post board-post"><a href="./p12-1.html">
             <div class="board__post__title">
                <p>보존 기록 기술에 관한 북미 프로젝트에 관한 문의사항이 있습니다.</p>
             </div>
@@ -612,7 +612,7 @@
             </div>
          </a></li>
 
-         <li class="board-post board-post re"><a href="/p12-1.html">
+         <li class="board-post board-post re"><a href="./p12-1.html">
             <div class="board__post__title">
                <p>보존 기록 기술에 관한 북미 프로젝트에 관한 문의사항이 있습니다.</p>
             </div>
@@ -634,7 +634,7 @@
 
 <!-- 게시판 포스트  - 글쓰기 버튼 start -->
       <div class="board__write btn-write">
-         <a href="/p12-2.html" title="글쓰기버튼">+</a>
+         <a href="./p12-2.html" title="글쓰기버튼">+</a>
       </div>
 <!-- 게시판 포스트  - 글쓰기 버튼 end -->
 
@@ -652,11 +652,11 @@
 <!-- 아카이브소개 + 최근소식 시작 -->
       <!-- <ul class="site-footer__nav">
          <li>
-            <a href="/p11.html">아카이브 소개</a>
+            <a href="./p11.html">아카이브 소개</a>
          </li> 
       </ul> -->
       <div class="site-footer__nav">
-         <a href="/p11.html">아카이브 소개</a>
+         <a href="./p11.html">아카이브 소개</a>
       </div>
 <!-- 아카이브소개 + 최근소식 끝 -->
 
