Completed Archive responsive web 2.1

--- a/app/assets/htmls/p16.html
+++ b/app/assets/htmls/p16.html
@@ -20,7 +20,7 @@
          <div class="series-contents__text">
 
             <div class="series-contents__img">
-               <img src="/temp/images/m-thumbnail.jpg" alt="대체텍스트">
+               <img src="./temp/images/m-thumbnail.jpg" alt="대체텍스트">
             </div>
             <p>내가 연상세계를 주목하기 시작한 것은 독방의 무료를 달래기 위한 노래 때문이었습니다. 징역 초년에 독방에서 허밍했던 노래가 영화 부베의 연인의 주제곡이었습니다. 내가 감옥 가기 전 마지막으로 본
             영화이기도 하고, 그 영화의 첫 장면과 함께 흐르는 주제목의 선율이 그렇게 마음에 와 닿았습니다. 영화의 첫 장면과 마지막 장면이 인상적이었습니다. 전사한 오빠의 친구이자 레지스탕스 대원이고,
