--- a/app/assets/htmls/p04.html
+++ b/app/assets/htmls/p04.html
@@ -38,15 +38,23 @@
 
 
 <!-- 화살표 start -->
-      <div class="arrow-bottom"><i class="xi-angle-down-min"> </i></div>
+      <!-- <div class="arrow-bottom"><i class="xi-angle-down-min"> </i></div> -->
 <!-- 화살표 end -->
 
 <!-- 기록슬라이더 end -->
       <div class="doc__slider">
-         <div class="doc__slider__slide" style="background-image: url(./temp/images/m-hero-slider01.png)"></div>
-         <div class="doc__slider__slide" style="background-image: url(./temp/images/m-hero-slider02.png)"></div>
-         <div class="doc__slider__slide" style="background-image: url(./temp/images/m-hero-slider03.png)"></div>
-         <div class="doc__slider__slide" style="background-image: url(./temp/images/m-hero-slider01.png)"></div>
+         <div class="doc__slider__slide">
+            <img src="https://loremflickr.com/325/230">
+         </div>
+         <div class="doc__slider__slide">
+            <img src="https://loremflickr.com/325/500">
+         </div>
+         <div class="doc__slider__slide">
+            <img src="https://loremflickr.com/500/230">
+         </div>
+         <div class="doc__slider__slide">
+            <img src="https://loremflickr.com/325/400">
+         </div>
       </div>
 <!-- 기록슬라이더 end -->
 
@@ -136,8 +144,9 @@
 
                      <li class="other-contents">
                         <ul>
+<!-- 현재포스트 색상변경을 위해 li에 class명 current-post 가 필요합니다  -->
                            <li><a href="#">사진류다른기록</a></li>
-                           <li><a href="#">사진류다른기록</a></li> 
+                           <li class="current-post"><a href="#">사진류다른기록</a></li> 
                            <li><a href="#">사진류다른기록</a></li> 
                            <li><a href="#">사진류다른기록</a></li>
                         </ul>
@@ -155,7 +164,7 @@
                      <li class="other-contents">
                         <ul>
                            <li><a href="#">내가 연상세계를 주목하기 시작한 것</a></li>
-                           <li><a href="#">징역 초년에 독방에서 허밍했던 노래</a></li> 
+                           <li class="current-post"><a href="#">징역 초년에 독방에서 허밍했던 노래</a></li> 
                            <li><a href="#">지금은 살인죄로 7년째 복역하고 있는 연</a></li> 
                            <li><a href="#">영화의 마지막 장면 역시 처음의 열차 영화의 마지막 장면 역시 처음의 열차</a></li>
 
@@ -173,7 +182,7 @@
                      <li class="other-contents">
                         <ul>
                            <li><a href="#">내가 연상세계를 주목하기 시작한 것</a></li>
-                           <li><a href="#">징역 초년에 독방에서 허밍했던 노래</a></li> 
+                           <li class="current-post"><a href="#">징역 초년에 독방에서 허밍했던 노래</a></li> 
                            <li><a href="#">지금은 살인죄로 7년째 복역하고 있는 연</a></li> 
                            <li><a href="#">영화의 마지막 장면 역시 처음의 열차 영화의 마지막 장면 역시 처음의 열차</a></li>
 
@@ -193,7 +202,7 @@
                      <li class="other-contents">
                         <ul>
                            <li><a href="#">내가 연상세계를 주목하기 시작한 것</a></li>
-                           <li><a href="#">징역 초년에 독방에서 허밍했던 노래</a></li> 
+                           <li class="current-post"><a href="#">징역 초년에 독방에서 허밍했던 노래</a></li> 
                            <li><a href="#">지금은 살인죄로 7년째 복역하고 있는 연</a></li> 
                            <li><a href="#">영화의 마지막 장면 역시 처음의 열차 영화의 마지막 장면 역시 처음의 열차</a></li>
 
